--- a/tase_reset/platformio.ini
+++ b/tase_reset/platformio.ini
@@ -8,9 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:megaatmega2560]
-platform = atmelavr
-board = megaatmega2560
+[env:wemos_d1_uno32]
+platform = espressif32
+board = wemos_d1_uno32
 framework = arduino
-
-
